--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,16 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+
+    /* Custom Sidebar Colors */
+    --sidebar-background: 224 71.4% 4.1%;
+    --sidebar-foreground: 0 0% 98%;
+    --sidebar-primary: 173 96% 28%;
+    --sidebar-primary-foreground: 173 33% 98%;
+    --sidebar-accent: 215 27.9% 16.9%;
+    --sidebar-accent-foreground: 0 0% 98%;
+    --sidebar-border: 215 27.9% 16.9%;
+    --sidebar-ring: 173 96% 28%;
   }
 
   .dark {
